	bypassed simply because the surfaces are turned off.
	The old logic was bogus anyhow, since there were many tests for
	"if (!draw_surface)" inside the main "if (draw_surface)" block.
	The result: now I can plot labels and vectors on top of my contours.
	In general, 'splot ... with {labels|vectors|image|rgbimage}'
	now ignores both "{un}set contour" and "{un}set surface"

2008-01-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* graph3d.c (map3d_getposition, map3d_position_r): Fix case of y graph
	coordinate and splot_map.

2008-01-27  Ethan A Merritt  <merritt@u.washington.edu>

	* graph3d.c (cntr3d_lines) util3d.c (polyline3d_next) gadgets.c:
	Clip contour lines to the plot boundary in "set view map" mode.
	Remove dead code related to these routines.
	Bug #1745598

2008-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Be more precise in estimating the vertical
	space required to accommodate rotated tick labels on x and x2 axes.
	Bug #1879907

2008-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/graphics.c (do_plot) src/graph3d.c (do_3dplot):
	Bracket each individual plot within a figure by a pair of calls to
	term->layer(TERM_LAYER_BEFORE_PLOT) term->layer(TERM_LAYER_AFTER_PLOT).

	* term/svg.trm (SVG_layer): Use the notification to encapsulate each
	plot into an <a xlink:title="Plot #N"> ... </a>  context.
	SourceForge tracker ref #1359667

	* term/post.trm (PS_layer): Use the notification to insert comments
	before and after the code for each plot.

	* term/fig.trm (FIG_layer): Use the notification to wrap each plot
	as a separate compound object for later editing.
	SourceForge tracker ref #1683173

2008-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/help.c src/command.c:  The old compile option NO_GIH allowed
	bypassing gnuplot's internal help code on systems that have other help
	mechanisms (Windows, VMS). Clean this up so that it compiles correctly